Fix illustration column

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,13 @@ background-size:40%;">
 	<script src="build/vendor.js"></script>
 
 	<!-- The bundle js is generated during the build process -->
-	<script src="build/main.js"></script>
+    <script src="build/main.js"></script>
+
+    <script>
+        function setIllustration(el) {
+            return;
+        }
+    </script>
 
 	<noscript>Your browser does not support JavaScript!</noscript>
 </body>
